# openDAQ

./: CMakePresets.json  README.md  antora-playbook-dev.yml  antora-playbook.yml  openDAQnotes.txt  opendaq_version_bump.py  test_week.py
.github/workflows/: build_antora_docs.yml  ci.yml  package-artifact-trigger.yml
bindings/dotnet/openDAQ.Net/BasicHowTo/: Program.cs
bindings/python/core_types/src/: py_converter.cpp
bindings/python/opendaq/: py_opendaq.cpp
bindings/python/tests/: test_how_to_last_value.py  test_last_value.py
core/coreobjects/include/coreobjects/: property_object_impl.h
core/opendaq/modulemanager/src/: module_manager_impl.cpp
cstest/: Program.cs  cstest.csproj  cstest.sln
docs/Antora/: antora.yml
docs/Doxygen/: Doxyfile.in  doxyfile_fill.py
docs/tests/: test_streaming_config.cpp
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/device_server/: device_server.cpp
examples/cpp/empty_example/: empty_example.cpp
examples/cpp/my_example/: CMakeLists.txt  my_example.cpp
examples/cpp/quick_start/: quick_start_empty.cpp  quick_start_simulator.cpp
modules/: CMakeLists.txt
modules/my_module/: CMakeLists.txt
modules/my_module/src/: CMakeLists.txt  butterworth.cpp  module_dll.cpp  my_filter_impl.cpp  my_module_impl.cpp
modules/my_module/tests/: CMakeLists.txt  test_my_module.cpp
modules/native_streaming_client_module/src/: native_streaming_client_module_impl.cpp
modules/ref_fb_module/src/: trigger_fb_impl.cpp
modules/ref_fb_module/tests/: test_fb_trigger.cpp
modules/tests/test_opendaq_device_modules/: test_native_device_modules.cpp
(+20 files in other folders)
